infra/security/crowdsec/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crowdsec
  labels:
    name: crowdsec
